add random letter function and center style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div class="letters">
-            
+        <div class="center">
+            <div class="letters">
+                
+            </div>
         </div>
     </body>
 </html>
