Make overlay stay until JSON loads

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div class="container" style="background-color:red;">
+        <div class="container" style="background-color:blue;">
             <div class="center">
                 <div class="greek">
                     <div class="letters">
@@ -30,6 +30,11 @@
                 <div class="description">
                     <p><em>(<span class="description-text"></span>)</em></p>
                 </div>
+            </div>
+        </div>
+        <div class="overlay">
+            <div class="center">
+                <button disabled id="close-info" class="disabled">Start</button>
             </div>
         </div>
     </body>
