Break out reRoll into separate function

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="overlay">
             <div class="center">
-                <button disabled id="close-info" class="disabled">Start</button>
+                <button disabled id="close-info" class="disabled">Loading...</button>
             </div>
         </div>
     </body>
