Add share buttons and improved button CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./style.css" type="text/css" />
         <link rel="stylesheet" href="./animate.css" type="text/css" />
         
-        <script   src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
@@ -25,7 +25,8 @@
                 </div>
                 <div class="buttons">
                     <button id="reRoll">Re-Roll</button>
-                    <button id="share">Share</button>
+                    <button id="share">Tweet</button>
+                    <!--<a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>-->
                 </div>
                 <div class="description">
                     <p><em>(<span class="description-text"></span>)</em></p>
@@ -34,7 +35,13 @@
         </div>
         <div class="overlay">
             <div class="center">
+                <h1>Greek Chapter Generator</h1>
+                <h4>Make a new Greek chapter and slogan at the click of a button.</h4>
                 <button disabled id="close-info" class="disabled">Loading...</button>
+                <div class="more-info">
+                    <p>Created by <a href="#" target="_blank">Rhyne Vlaservich</a></p>
+                    <p><a href="https://github.com/rhyneav/frat-srat-gen" target="_blank">View the Git Repo</a></p>
+                </div>
             </div>
         </div>
     </body>
