Remove bad comments

--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
                 <div class="buttons">
                     <button id="reRoll">Re-Roll</button>
                     <button id="share">Tweet</button>
-                    <!--<a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>-->
                 </div>
                 <div class="description">
                     <p><em>(<span class="description-text"></span>)</em></p>
+                    <p class="view-info"><a href="#">view info</a></p>
                 </div>
             </div>
         </div>
         <div class="overlay">
             <div class="center">
-                <h1>Greek Chapter Generator</h1>
-                <h4>Make a new Greek chapter and slogan at the click of a button.</h4>
+                <div class="titles">
+                    <h1>Greek Chapter Generator</h1>
+                    <h4>Make a new Greek chapter and slogan at the click of a button.</h4>
+                </div>
                 <button disabled id="close-info" class="disabled">Loading...</button>
                 <div class="more-info">
-                    <p>Created by <a href="#" target="_blank">Rhyne Vlaservich</a></p>
+                    <p>Created by <a href="http://vlaservi.ch" target="_blank">Rhyne Vlaservich</a></p>
                     <p><a href="https://github.com/rhyneav/frat-srat-gen" target="_blank">View the Git Repo</a></p>
                 </div>
             </div>
